src/gui02/components/DataViewHeader/DataViewHeader.module.scss
@import "src/styles/common_styles.scss";
@import "src/styles/definitions.scss";

.root {
  min-height: 0px;
  max-height: 0px;
  flex-shrink: 0;
  background: #ffffff;
  padding: 0 1em 0 2em;
  display: flex;
  flex-direction: row;
  align-items: center;
  overflow: hidden;
  flex-wrap: nowrap;
  position: relative;
  width: 100%;
  // box-shadow: -1px 3px 7px -2px rgba(0, 0, 0, 0.4);
  z-index: 150;
  border-top: 1px solid #dddddd;

  border-style: solid;
  border-color: $grey2 !important;
  border-width: 0 0 1px 0;
  
  &:global(.isVisible) {
    min-height: 30px;
    max-height: 30px;
    border-bottom: 1px solid #dddddd;
  }

  .inner {
    height: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
    overflow: hidden;
    flex-wrap: nowrap;
  }

  :global(.fullspaceBlock) {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    flex: 1 1 auto;
    min-width: 0;
  }

  h2 {
    font-size: $h2-fontsize;
    line-height: $h2-lineheight;
    font-weight: 700;
    margin: 0 1.5em 0 0;
    padding: 0;
    text-overflow: ellipsis;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    word-wrap: normal;
    white-space: nowrap;
  }
}

